trying to solve rezising when scroll on mobile

--- a/src/public/css/indexStyles/_homeBanner.css
+++ b/src/public/css/indexStyles/_homeBanner.css
@@ -17,6 +17,7 @@
     text-align: center;
     width: 100%;
     height: 100vh;
+    min-height: 100%;
     background-image: url('../../upload/casa_portada_2.jpg');
     background-position: center center;
     background-repeat: no-repeat;
